Slide das familias e inicio da criação do aviso

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
 	<cba-header></cba-header>
 	<router-outlet (deactivate)="onDeactivate()"></router-outlet>
 	<cba-footer></cba-footer>
+	<!-- <cba-warning></cba-warning> -->
 </div>
