--- a/src/app/pages/properties/properties.component.html
+++ b/src/app/pages/properties/properties.component.html
@@ -184,7 +184,7 @@
 									</div>
 								</div>
 								<div role="tabpanel" class="tab-pane" id="reassentamento-aba">
-									<div class="single_service_tab">
+									<div class="single_service_tab" style="margin-bottom: 40px">
 										<div class="row">
 											<div class="head_title" style="margin-bottom: 10px;">
 												<h3 class="font2-3">DESTINAÇÃO DOS IMÓVEIS</h3>
@@ -194,54 +194,60 @@
 										<div class="row">
 											<div class="col-sm-6">
 												<div class="single_tab_content">
+													<div class="single_tab_img" style="margin-bottom: 20px;">
+														<span class="concilia-credit">
+															<i class="fa fa-user"></i>
+															&nbsp;&nbsp;Irineu Evangelista
+														</span>
+														<img src="assets/images/014.jpg" alt="" />
+														<span class="concilia-caption" style="margin-bottom:20px;">
+															<i class="fa fa-camera"></i>
+															&nbsp;&nbsp;A equipe técnica e social do Programa acompanha os beneficiários na visita às novas moradias
+														</span>
 
+													</div>
 													<p style="font-size: 1.24rem;">O programa Concilia BR-381 e Anel busca sempre o imóvel que mais se adeque a cada unidade familiar. Para nortear a melhor destinação, o programa busca atender os seguintes critérios:</p>
 
-													<ol type="A">
+													<ul type="A">
 														<li class="list-alpha-numeric font-124">
-															<p class="font-124"><b>número de dormitórios: </b>será considerado o número de pessoas por gênero e a situação de cada uma em seu grupo familiar.</p>
-														</li>
+															<p class="font-124"><b>Número de dormitórios: </b>será considerado o número de pessoas por gênero e a situação de cada uma em seu grupo familiar.</p>
+														</li><br />
 														<li class="list-alpha-numeric font-124">
-															<p class="font-124"><b>tipologia: </b> prioridade à tipologia <b>casa</b>, em detrimento de apartamentos ou habitações coletivas, para as seguintes situações:</p>
-															<ul style="list-style-type: disc; margin-left: 4.5rem;">
-																<li><p class="justfy-text font-124">famílias com pessoas com deficiência ou sofrimento mental, com indicativo de agravamento do quadro em função da possibilidade de residência verticalizada (prédios, edifícios), ou mesmo provocar transtornos à vida coletiva/em condomínio;</p></li>
-																<li><p class="justfy-text font-124">famílias com idosos ou pessoas com deficiência ou mobilidade reduzida; não sendo possível, serão indicados às unidades verticalizadas (prédios, edifícios) no primeiro andar;</p></li>
-																<li><p class="justfy-text font-124">famílias com atividade de renda domiciliar, que não seja geradora de transtornos para vizinhança e que seja incompatível com unidade verticalizada (prédios, edifícios).</p></li>
-															</ul>
+															<p class="font-124"><b>Tipologia: </b> prioridade à tipologia <b>casa</b>, em detrimento de apartamentos ou habitações coletivas, para as seguintes situações:</p>
 														</li>
-														<li class="list-alpha-numeric font-124">
-															<p class="font-124"><b>localização: </b> prioridade de escolha por determinada região para as famílias que atenderem ao maior número dos critérios abaixo:</p>
-															 <!-- <ul style="list-style-type: disc; margin-left: 4.5rem;">
-																<li><p class="justfy-text font-124">existência de pessoa da família em acompanhamento médico, de instituição de assistência social ou educacional com necessidades que não possam ser garantidas em outras regiões;</p></li>
-															</ul> -->
-														</li>
-													</ol>
+													</ul>
 												</div>
 											</div>
 											<div class="col-sm-6">
-												<ul style="list-style-type: disc; margin-left: 4.5rem;">
-													<li><p class="justfy-text font-124">existência de pessoa da família em acompanhamento médico, de instituição de assistência social ou educacional com necessidades que não possam ser garantidas em outras regiões;</p></li>
-													<li><p class="justfy-text font-124">existência de idosos ou pessoas da família inseridos na rede social de determinada região;</p></li>
-													<li><p class="justfy-text font-124">existência de familiares que prestem apoio ou assistência à família em determinada região;</p></li>
-													<li><p class="justfy-text font-124">vínculo profissional com determinada região;</p></li>
-													<li><p class="justfy-text font-124">existência de serviços na região de destino que sejam essenciais à inclusão social da família.</p></li>
-												</ul>
-												<div class="single_tab_img">
-													<span class="concilia-credit" style="margin-top:20px;">
-														<i class="fa fa-user"></i>
-														&nbsp;&nbsp;Irineu Evangelista
-													</span>
-													<img src="assets/images/014.jpg" alt="" />
-													<span class="concilia-caption">
-														<i class="fa fa-camera"></i>
-														&nbsp;&nbsp;A equipe técnica e social do Programa acompanha os beneficiários na visita às novas moradias
-													</span>
+												<ul>
+													<li class="list-alpha-numeric font-124">
+														<p class="font-124">
+														<ul style="list-style-type: disc; margin-left: 4.5rem;">
+															<li><p class="justfy-text font-124">famílias com pessoas com deficiência ou sofrimento mental, com indicativo de agravamento do quadro em função da possibilidade de residência verticalizada (prédios, edifícios), ou mesmo provocar transtornos à vida coletiva/em condomínio;</p>
+															</li>
+															<li><p class="justfy-text font-124">famílias com idosos ou pessoas com deficiência ou mobilidade reduzida; não sendo possível, serão indicados às unidades verticalizadas (prédios, edifícios) no primeiro andar;</p></li>
+															<li><p class="justfy-text font-124">famílias com atividade de renda domiciliar, que não seja geradora de transtornos para vizinhança e que seja incompatível com unidade verticalizada (prédios, edifícios).</p></li>
+														</ul>
+													</li>
 
-												</div>
+													<li class="list-alpha-numeric font-124">
+														<p class="font-124"><b>Localização: </b> prioridade de escolha por determinada região para as famílias que atenderem ao maior número dos critérios abaixo:</p>
+														<ul style="list-style-type: disc; margin-left: 4.5rem;">
+															<li><p class="justfy-text font-124">existência de pessoa da família em acompanhamento médico, de instituição de assistência social ou educacional com necessidades que não possam ser garantidas em outras regiões;</p></li>
+															<li><p class="justfy-text font-124">existência de idosos ou pessoas da família inseridos na rede social de determinada região;</p></li>
+															<li><p class="justfy-text font-124">existência de familiares que prestem apoio ou assistência à família em determinada região;</p></li>
+															<li><p class="justfy-text font-124">vínculo profissional com determinada região;</p></li>
+															<li><p class="justfy-text font-124">existência de serviços na região de destino que sejam essenciais à inclusão social da família.</p></li>
+														</ul>
+													</li>
+												</ul>
 											</div>
 											<!--                                                        <div id="pentagon"></div>-->
 										</div>
 									</div>
+									<!-- INICIO TESTE-->
+										<cba-slide></cba-slide>
+										<!-- FIM TESTE-->
 								</div>
 								<div role="tabpanel" class="tab-pane" id="conciliacao-aba">
 									<div class="single_service_tab">
