--- a/src/app/components/slide/slide.component.html
+++ b/src/app/components/slide/slide.component.html
@@ -1,39 +1,31 @@
-<section id="home" class="home">
-	<div class="overlay">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12 ">
-					<div class="main_home_slider text-center">
-						<div class="single_home_slider">
-							<div class="main_home wow fadeInUp" data-wow-duration="700ms">
-								<h1 style="text-align: -webkit-center;">
-									<img src="assets/images/logoconcilia.png" alt="Logo do concilia" style="max-width:60%">
-								</h1>
-							</div>
-						</div>
-						<div class="single_home_slider">
-							<div class="main_home wow fadeInUp" data-wow-duration="700ms">
-								<h1>WELCOME TO OUR LOGIC</h1>
-								<p>We Make Awesome Theme For Your Business</p>
-								<div class="home_btn">
-									<a href="https://bootstrapthemes.co" class="btn btn-primary">LEARN MORE</a>
-								</div>
 
-							</div>
-						</div>
-						<div class="single_home_slider">
-							<div class="main_home wow fadeInUp" data-wow-duration="700ms">
-								<h1>WELCOME TO OUR LOGIC</h1>
-								<p>We Make Awesome Theme For Your Business</p>
-								<div class="home_btn">
-									<a href="https://bootstrapthemes.co" class="btn btn-primary">LEARN MORE</a>
-								</div>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
 
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" style="background-image: url('assets/images/slide-families/salacasasite.jpg');background-repeat: no-repeat;background-size: cover;">
+
+		<div class="item active"><img src="assets/images/slide-families/familia1.png" alt="" class="d-block w100"></div>
+		<div class="item"><img src="assets/images/slide-families/familia2.png" alt="" class="d-block w100"></div>
+		<div class="item"><img src="assets/images/slide-families/familia3.png" alt="" class="d-block w100"></div>
+		<div class="item"><img src="assets/images/slide-families/familia4.png" alt="" class="d-block w100"></div>
+		<div class="item"><img src="assets/images/slide-families/familia5.png" alt="" class="d-block w100"></div>
+		<div class="item"><img src="assets/images/slide-families/familia6.png" alt="" class="d-block w100"></div>
+		<div class="item"><img src="assets/images/slide-families/familia7.png" alt="" class="d-block w100"></div>
+		<div class="item"><img src="assets/images/slide-families/familia8.png" alt="" class="d-block w100"></div>
+		<div class="item"><img src="assets/images/slide-families/familia9.png" alt="" class="d-block w100"></div>
+		<div class="item"><img src="assets/images/slide-families/familia10.png" alt="" class="d-block w100"></div>
+		<div class="item"><img src="assets/images/slide-families/familia11.png" alt="" class="d-block w100"></div>
+		<div class="item"><img src="assets/images/slide-families/familia12.png" alt="" class="d-block w100"></div>
+		<div class="item"><img src="assets/images/slide-families/familia13.png" alt="" class="d-block w100"></div>
+		<div class="item"><img src="assets/images/slide-families/familia14.png" alt="" class="d-block w100"></div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
