--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css");
+
 html,
 body {
     background-color: #fff;
