Inseção da página de documentação e alerta de teste

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -47,7 +47,7 @@
 										<a class="dropbtn" style="cursor:pointer;">Imóveis</a>
 										<ul class="dropdown-content ul-submenu" style="right: auto;">
 											<li><a [routerLink]="['/imoveis']">Imóveis</a></li>
-											<!--<li><a [routerLink]="['/imoveis-documentacao']">Documentação</a></li>-->
+											<li><a [routerLink]="['/imoveis-documentacao']">Documentação</a></li>
 										</ul>
 									</li>
 
