--- a/src/app/pages/documents/documents.component.html
+++ b/src/app/pages/documents/documents.component.html
@@ -4,97 +4,344 @@
 			<div class="row">
 				<div class="col-sm-12 ">
 					<h1 style="text-align: -webkit-center;">
-						<img src="assets/images/banner_images/providencias.png" alt="Logo do concilia" style="max-width:60%;margin-top: 150px;">
+						<img src="assets/images/logoconcilia.png" alt="Logo do concilia" style="max-width:60%;margin-top: 150px;">
 					</h1>
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
-<section id="about" class="about">
+<section id="service" class="service" style="padding-bottom:50px;">
 	<div class="container">
-		<div class="main_about_area sections" style="padding-bottom:0;">
-			<div class="row">
-				<div class="col-sm-12">
-					<div class="head_title" style="margin-bottom: 50px;">
-						<h3 style="font-size: 3rem;">PLANO DE PROVIDÊNCIAS</h3>
-						<div class="separator"></div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="main_about_area sections" style="padding-top:0;padding-bottom:0;">
-				<div class="col-sm-6">
-					<p class="font-124">O Plano de Providências é um documento elaborado pelo Departamento Nacional de Infraestrutura de Transportes - DNIT com o objetivo de apresentar ações e soluções que o órgão entende como necessárias para viabilizar o reassentamento definitivo das famílias cadastradas no Concilia BR-381 e Anel.</p>
-					<p class="font-124">Além pretender o cumprimento das decisões judiciais proferidas no âmbito da Ação Civil Pública, o documento é fruto de intenso processo dialógico. Nele, foram incorporadas críticas e contribuições de todas as partes envolvidas no processo, bem como consolidados instrumentos que possibilitarão minimizar as divergências e alcançar a eficácia na execução das ações.</p>
-					<p class="font-124">Como resultado dessas discussões, a proposta do DNIT passou a envolver 12 macroatividades, sucessivas e interdependentes, a serem executadas no período de 20/02/17 a 07/02/18:</p>
-					<ul class="single_ab_mision">
-						<li class="col-sm-6 font-124">
-							<i class="fa fa-check-square"></i>
-							banco de imóveis;
-						</li>
-						<li class="col-sm-6 font-124">
-							<i class="fa fa-check-square"></i>
-							informações cadastrais;
-						</li>
-						<li class="col-sm-6 font-124">
-							<i class="fa fa-check-square"></i>
-							estruturação do escritório do programa;
-						</li>
-						<li class="col-sm-6 font-124">
-							<i class="fa fa-check-square"></i>
-							celebração de acordo judicial;
-						</li>
-						<li class="col-sm-6 font-124">
-							<i class="fa fa-check-square"></i>
-							definição de parâmetros e regras;
-						</li>
-						<li class="col-sm-6 font-124">
-							<i class="fa fa-check-square"></i>
-							comunicação institucional;
-						</li>
-						<li class="col-sm-6 font-124">
-							<i class="fa fa-check-square"></i>
-							audiências públicas;
-						</li>
-						<li class="col-sm-6 font-124">
-							<i class="fa fa-check-square"></i>
-							acompanhamento pré morar;
-						</li>
-						<li class="col-sm-6 font-124">
-							<i class="fa fa-check-square"></i>
-							aquisição dos imóveis;
-						</li>
-						<li class="col-sm-6 font-124">
-							<i class="fa fa-check-square"></i>
-							contratação e execução da demolição;
-						</li>
-					</ul>
-				</div>
-				<div class="col-sm-6">
-					<span class="concilia-credit" style="padding-top:10%;">
-						<i class="fa fa-user"></i>
-						&nbsp;&nbsp;Felipe Chimicatti
-					</span>
-					<img src="assets/images/plano_providencias.jpg" alt="" style="max-width: inherit;">
-					<span class="concilia-caption">
-						<i class="fa fa-camera"></i>
-						&nbsp;&nbsp;Moradias às margens de uma das vias mais movimentadas do país: O Anel Rodoviário de BH.
-					</span>
-
-				</div>
-			</div>
-		</div>
 		<div class="row">
 			<div class="col-sm-12">
-				<a target="_blank" href="{{actionPlan}}">
-					<b>
-						 <h5 class="text-center" style="margin:50px"><i class="fa fa-file-pdf-o fa-2x" aria-hidden="true" style="color: #444;"></i>&nbsp;&nbsp;
-							Acesse o plano de providências
-						</h5>
-					</b>
-				</a>
+				<div class="main_service_area">
+					<div class="main_service_content">
+						<div class="service_tabe">
+							<!-- Nav tabs -->
+							<ul class="service_tabe_menu nav nav-tabs" role="tablist">
+								<li role="presentation" class="active">
+									<a href="#cadunico-aba" aria-controls="cadunico-aba" role="tab" data-toggle="tab">
+										<i class="fa fa-home" aria-hidden="true"></i><br />
+										CADASTRO ÚNICO
+									</a>
+								</li>
+								<li role="presentation">
+									<a href="#beneficiarios-aba" aria-controls="beneficiarios-aba" role="tab" data-toggle="tab">
+										<i class="fa fa-map-marker"></i> <br />
+										DOCUMENTOS DOS <br />BENEFICIÁRIOS
+									</a>
+								</li>
+								<li role="presentation">
+									<a href="#imovel-aba" aria-controls="imovel-aba" role="tab" data-toggle="tab">
+										<i class="fa fa-th-list" aria-hidden="true"></i> <br />
+										DOCUMENTOS DO IMÓVEL
+									</a>
+								</li>
+								<li role="presentation">
+									<a href="#vendedor-aba" aria-controls="vendedor-aba" role="tab" data-toggle="tab">
+										<i class="fa fa-location-arrow" aria-hidden="true"></i> <br />
+										DOCUMENTOS DO VENDEDOR
+									</a>
+								</li>
+							</ul>
+
+							<!-- Tab panes -->
+							<div class="tab-content" style="margin-top: 50px;">
+								<div role="tabpanel" class="tab-pane active" id="cadunico-aba">
+									<div class="single_service_tab">
+										<div class="row">
+											<div class="head_title" style="margin-bottom: 10px;">
+												<h3 class="font2-3">CADASTRO ÚNICO</h3>
+												<div class="separator"></div>
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-sm-6">
+												<div class="single_tab_content">
+													<p style="font-size: 1.24rem;">O CadÚnico é um instrumento que identifica as famílias de baixa renda para a participação em Programas Sociais do governo. Com esse cadastro, o governo passa a conhecer a realidade social e econômica dos inscritos. Podem se cadastrar famílias que recebem até três salários mínimos por mês. Esse cadastro é o primeiro passo para participar dos programas sociais e benefícios oferecidos pelo governo.  Veja na lista abaixo: </p>
+													<ul class="single_ab_mision">
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															Programa Bolsa Família;
+														</li>
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															Benefício de Prestação Continuada;
+														</li>
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															Meio passe estudantil;
+														</li>
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															Desconto em refeições nos Restaurantes Populares de Belo Horizonte para famílias beneficiárias do Bolsa Família;
+														</li>
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															Programas Habitacionais (Minha Casa Minha Vida/Vila Viva);
+														</li>
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															Carteira do idoso para emissão de bilhete em viagens interestaduais;
+														</li>
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															Descontos na linha de telefone fixa residencial;
+														</li>
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															Inserção na educação infantil - UMEI;
+														</li>
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															Acesso às Tarifas Sociais de água e luz;
+														</li>
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															Desconto no pagamento da previdência social para donas de casa.
+														</li>
+													</ul>
+												</div>
+											</div>
+
+											<div class="col-sm-6">
+												<div class="single_tab_content">
+													<p style="font-size: 1.24rem;">A prefeitura de cada município é responsável pelo cadastramento de pessoas no CadÚnico. Em Belo Horizonte, você pode realizar o cadastramento da sua família na Gerência Regional de Programas de Transferência de Renda da Administração Regional perto da sua casa: </p>
+													<ul class="single_ab_mision">
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															Regional Barreiro – Rua Flávio Marques Lisboa, 345, 1º andar, Barreiro, CitMall;
+														</li>
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															Regional Centro Sul – Rua Tupis, 149, 8º andar, Centro;
+														</li>
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															Regional Leste – Rua Lauro Jaques, 20, 2º andar, Floresta;
+														</li>
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															Regional Nordeste – Rua Queluzita, 45, São Paulo;
+														</li>
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															Regional Norte – Rua Pastor Muryllo Cassete, 25, São Bernardo;
+														</li>
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															Regional Oeste – Av. Silva Lobo, 1.280, 1º andar, Nova Granada;
+														</li>
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															Regional Pampulha – Av. Antônio Carlos, 7.596, 2º andar, Pampulha;
+														</li>
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															Regional Venda Nova – Rua Padre Pedro Pinto, 1.055, Venda Nova;
+														</li>
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															BH RESOLVE – Av. Santos Dumont, 363, Centro;
+														</li>
+													</ul>
+												</div>
+											</div>
+										</div> <br /><br />
+										<div class="row">
+											<div class="col-sm-6">
+												<div class="single_tab_img">
+													<!-- <span class="concilia-credit">
+														<i class="fa fa-user"></i>
+														&nbsp;&nbsp;
+													</span> -->
+													<img src="assets/images/cadunico.jpg" alt="" />
+													<!-- <span class="concilia-caption">
+														<i class="fa fa-camera"></i>
+														&nbsp;&nbsp;
+													</span> -->
+												</div>
+											</div>
+											<div class="col-sm-6">
+												<div class="single_tab_content"><br />
+													<h3>Você deve levar os documentos abaixo: </h3>
+													<ul class="single_ab_mision">
+														<li class="font-124 col-sm-6">
+															<i class="fa fa-check-square"></i>
+															CPF;
+														</li>
+														<li class="font-124 col-sm-6">
+															<i class="fa fa-check-square"></i>
+															Título de eleitor;
+														</li>
+														<li class="font-124 col-sm-6">
+															<i class="fa fa-check-square"></i>
+															Carteira de trabalho (quando possuir);
+														</li>
+														<li class="font-124 col-sm-6">
+															<i class="fa fa-check-square"></i>
+															Comprovante de renda;
+														</li>
+														<li class="font-124 col-sm-6">
+															<i class="fa fa-check-square"></i>
+															Comprovante de endereço;
+														</li>
+														<li class="font-124 col-sm-6">
+															<i class="fa fa-check-square"></i>
+															Declaração escolar dos filhos menores de 18 anos;
+														</li>
+														<li class="font-124 col-sm-12">
+															<i class="fa fa-check-square"></i>
+															Carteira de identidade ou certidão de nascimento para as crianças que não possuírem identidade;
+														</li>
+													</ul>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div role="tabpanel" class="tab-pane" id="beneficiarios-aba">
+									<div class="single_service_tab">
+										<div class="row">
+											<div class="head_title" style="margin-bottom: 10px;">
+												<h3 class="font2-3">DOCUMENTOS DOS BENEFICIÁRIOS</h3>
+												<div class="separator"></div>
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-sm-6">
+												<div class="single_tab_content">
+
+													<p style="font-size: 1.24rem;">Para o processo de reassentamento, é necessário estar com os documentos pessoais em dia, como <strong>carteira de identidade</strong> e <strong>CPF</strong>.</p>
+													<p style="font-size: 1.24rem;">O recomendado é que a <strong>carteira de identidade</strong> tenha data de expedição inferior a 10 anos, para que a pessoa seja reconhecida pela foto, o que é também uma exigência cartorial.</p>
+													<p style="font-size: 1.24rem;">Para casais, também é necessária a <strong>certidão de casamento</strong>. Outro documento importante é o <strong>Cadastro Único</strong>. Com ele, o beneficiário consegue requerer vários outros benefícios.</p>
+												</div>
+											</div>
+
+											<div class="col-sm-6">
+												<div class="single_tab_img">
+													<!-- <span class="concilia-credit">
+														<i class="fa fa-user"></i>
+														&nbsp;&nbsp;
+													</span> -->
+													<img src="assets/images/doc_benef.jpg" alt="" />
+													<!-- <span class="concilia-caption">
+														<i class="fa fa-camera"></i>
+														&nbsp;&nbsp;
+													</span> -->
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div role="tabpanel" class="tab-pane" id="imovel-aba">
+									<div class="single_service_tab">
+										<div class="row">
+											<div class="head_title" style="margin-bottom: 10px;">
+												<h3 class="font2-3">DOCUMENTOS DO IMÓVEL</h3>
+												<div class="separator"></div>
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-sm-6">
+												<div class="single_tab_content">
+
+													<p style="font-size: 1.24rem;">O Programa conta com um banco de imóveis regulares e disponíveis para visitação. No entanto, o beneficiário tem, ainda, a opção de indicar um imóvel de sua preferência. Esse imóvel deve apresentar escritura e ser registrado em cartório. Para a equipe visitar a moradia indicada, basta o beneficiário apresentar Cópia da Matrícula do Registro de Imóvel para que seja viável o prosseguimento da análise técnica. A moradia não pode apresentar defeitos construtivos tais como:</p>
+													<ul class="single_ab_mision">
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															trincas,
+														</li>
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															ferragens expostas;
+														</li>
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															instalações hidráulicas e elétricas em má condição;
+														</li>
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															insalubridade (mofo, infiltração falta de ve)ntilação e iluminação).
+														</li>
+													</ul><br />
+													<p style="font-size: 1.24rem;">Também não deve estar em área de risco geológico (próximo de encostas, barrancos, córregos ou pedreiras) ou em áreas não edificantes (proximidade de rodovias, ferrovias, rios, ou redes da Cemig).</p>
+												</div>
+											</div>
+
+											<div class="col-sm-6">
+												<div class="single_tab_img">
+													<!-- <span class="concilia-credit">
+														<i class="fa fa-user"></i>
+														&nbsp;&nbsp;Lilia Nogueira
+													</span> -->
+													<img src="assets/images/doc_imovel.jpg" alt="" />
+													<!-- <span class="concilia-caption">
+														<i class="fa fa-camera"></i>
+														&nbsp;&nbsp;Unidades Habitacionais no município de Esmeraldas. São 64 unidades disponíveis de dois quartos
+													</span> -->
+
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div role="tabpanel" class="tab-pane" id="vendedor-aba">
+									<div class="single_service_tab" style="margin-bottom: 40px">
+										<div class="row">
+											<div class="head_title" style="margin-bottom: 10px;">
+												<h3 class="font2-3">DOCUMENTOS DO VENDEDOR</h3>
+												<div class="separator"></div>
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-sm-6">
+												<div class="single_tab_img">
+													<div class="single_tab_img">
+														<!-- <span class="concilia-credit">
+															<i class="fa fa-user"></i>
+															&nbsp;&nbsp;
+														</span> -->
+														<img src="assets/images/doc_benef.jpg" alt="" />
+														<!-- <span class="concilia-caption">
+															<i class="fa fa-camera"></i>
+															&nbsp;&nbsp;
+														</span> -->
+													</div>
+
+												</div>
+											</div>
+											<div class="col-sm-6">
+												<div class="single_tab_content">
+													<p style="font-size: 1.24rem;">Para quem desejar vender imóveis regularizados para beneficiários do Programa, é necessário apresentar documentos pessoais como:</p>
+													<ul class="single_ab_mision">
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															carteira de identidade;
+														</li>
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															CPF;
+														</li>
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															comprovante de residência;
+														</li>
+														<li class="font-124">
+															<i class="fa fa-check-square"></i>
+															certidão de casamento (se possuir).
+														</li>
+													</ul>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
