--- a/src/app/warning/warning.component.html
+++ b/src/app/warning/warning.component.html
@@ -1,23 +1,26 @@
 <div id="warning" class="modal" data-easein="perspectiveDownIn"  tabindex="-1" role="dialog" aria-labelledby="costumModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
+	<div class="modal-dialog modal-lg" style="width:90%;">
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-					×
+					<i class="fa fa-close fa-2x"></i>
 				</button>
-				<h1 class="modal-title" style="color: #444;">
-					Modal Header
-				</h1>
+				<h2 class="modal-title" style="color: #444;">
+					Informativo
+				</h2>
 			</div>
 			<div class="modal-body">
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				</p>
+				<div class="row">
+					<div class="col-lg-4">
+						<img src="assets/images/calendar.png" alt="">
+					</div>
+					<div class="col-lg-8">
+						<h4>
+							Esse teste ainda não formatado para apresentar uma chamada de notícias muito importantes ou eventos que estão para acontecer.
+						</h4>
+					</div>
+				</div>
+
 			</div>
 			<div class="modal-footer">
 				<button class="btn btn-danger" data-dismiss="modal" aria-hidden="true">
