--- a/src/app/warning/warning.component.html
+++ b/src/app/warning/warning.component.html
@@ -1,22 +1,24 @@
 <div id="warning" class="modal" data-easein="perspectiveDownIn"  tabindex="-1" role="dialog" aria-labelledby="costumModalLabel" aria-hidden="true">
-	<div class="modal-dialog modal-lg" style="width:90%;">
-		<div class="modal-content">
+	<div class="modal-dialog modal-lg">
+		<div class="modal-content" style="background: #EFEFEF">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
 					<i class="fa fa-close fa-2x"></i>
 				</button>
 				<h2 class="modal-title" style="color: #444;">
-					Informativo
+					Guarde esta data
 				</h2>
 			</div>
 			<div class="modal-body">
 				<div class="row">
-					<div class="col-lg-4">
-						<img src="assets/images/calendar.png" alt="">
+					<div class="col-lg-3">
+						<img src="assets/images/calendar.png" alt="" style="width: 80%;">
 					</div>
 					<div class="col-lg-8">
 						<h4>
-							Esse teste ainda não formatado para apresentar uma chamada de notícias muito importantes ou eventos que estão para acontecer.
+							<strong>
+								Audiência de conciliação vai contemplar moradores do Anel e da BR 381  As primeiras 19 famílias já têm imóvel escolhido e devem finalizar o processo de compra. A audiência está marcado para o dia 26 de novembro, no Centro Judiciário de Conciliação em Belo Horizonte (MG), das 13h às 17h.
+							</strong>
 						</h4>
 					</div>
 				</div>
@@ -26,9 +28,9 @@
 				<button class="btn btn-danger" data-dismiss="modal" aria-hidden="true">
 					Fechar
 				</button>
-				<button class="btn btn-primary">
+				<!-- <button class="btn btn-primary">
 					Ver detalher
-				</button>
+				</button> -->
 			</div>
 		</div>
 	</div>
