--- a/src/app/warning/warning.component.html
+++ b/src/app/warning/warning.component.html
@@ -1,6 +1,6 @@
 <div id="warning" class="modal" data-easein="perspectiveDownIn"  tabindex="-1" role="dialog" aria-labelledby="costumModalLabel" aria-hidden="true">
 	<div class="modal-dialog modal-lg">
-		<div class="modal-content" style="background: #EFEFEF">
+		<div class="modal-content" style="background: #efefef">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
 					<i class="fa fa-close fa-2x"></i>
@@ -28,9 +28,9 @@
 				<button class="btn btn-danger" data-dismiss="modal" aria-hidden="true">
 					Fechar
 				</button>
-				<!-- <button class="btn btn-primary">
-					Ver detalher
-				</button> -->
+				<button class="btn btn-primary" (click)="goTo('/noticias/audiencia-de-conciliacao-contempla-moradores-do-anel-e-br-381')">
+					Ver detalhes
+				</button>
 			</div>
 		</div>
 	</div>
