Versão inicial de editais

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -56,7 +56,7 @@
 										<ul class="dropdown-content ul-submenu" style="right: auto;">
 											<li><a [routerLink]="['/plano-providencias']">Plano de providências</a></li>
 											<li><a [routerLink]="['/criterios-regras']">Critérios e regras</a></li>
-											<!--<li><a [routerLink]="['/editais']">Editais</a></li>-->
+											<li><a [routerLink]="['/editais']">Editais</a></li>
 										</ul>
 									</li>
                                     <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a [routerLink]="['/noticias']">Notícias</a></li>
