--- a/src/app/pages/notice/notice.component.html
+++ b/src/app/pages/notice/notice.component.html
@@ -47,28 +47,15 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr>
-							<td class="font-124">01/09/2017</td>
-							<td class="font-124">15/09/2017</td>
-							<td class="font-124" style="width:60%;">Licitação de empresa apta ao transporte rodoviário de carga, em caminhão fechado tipo baú, incluindo o transporte de móveis, utensílios, vestuário, objetos e demais pertences das famílias a serem removidas para as suas novas moradias.</td>
+						<tr *ngFor="let noticeConc of noticesConcorrencia">
+							<td class="font-124">{{noticeConc.title}}</td>
+							<td class="text-center font-124">{{noticeConc.date | humanizeDate}}</td>
+							<td class="font-124" style="width:300px;">{{noticeConc.description}}</td>
 							<td class="text-center font-124">
-								<a target="_blank" href="{{notice.notice}}">
+								<a target="_blank" href="{{noticeConc.notice}}">
 									<i class="fa fa-file-pdf-o fa-2x" aria-hidden="true" style="color: #444;"></i>
 								</a>
-								<a target="_blank" href="http://www1.dnit.gov.br/editais/consulta/resumo.asp?NUMIDEdital=6627#">
-									<i class="fa fa-external-link fa-2x" aria-hidden="true" style="color: #444;"></i>
-								</a>
-							</td>
-						</tr>
-						<tr *ngFor="let notice of notices">
-							<td class="font-124">{{notice.title}}</td>
-							<td class="font-124" style="width:300px;">{{notice.description}}</td>
-							<td class="text-center font-124">{{notice.date | humanizeDate}}</td>
-							<td class="text-center font-124">
-								<a target="_blank" href="{{notice.notice}}">
-									<i class="fa fa-file-pdf-o fa-2x" aria-hidden="true" style="color: #444;"></i>
-								</a>
-								<a target="_blank" href="{{notice.notice}}">
+								<a *ngIf="noticeConc.link != ''" target="_blank" href="{{noticeConc.link}}">
 									<i class="fa fa-external-link fa-2x" aria-hidden="true" style="color: #444;"></i>
 								</a>
 							</td>
