--- a/src/app/warning/warning.component.html
+++ b/src/app/warning/warning.component.html
@@ -6,18 +6,21 @@
 					<i class="fa fa-close fa-2x"></i>
 				</button>
 				<h2 class="modal-title" style="color: #444;">
-					Guarde esta data
+					{{alert?.title}}
 				</h2>
 			</div>
 			<div class="modal-body">
 				<div class="row">
-					<div class="col-lg-3">
-						<img src="assets/images/calendar.png" alt="" style="width: 80%;">
+					<div class="col-lg-3 col-md-3 col-sm-4">
+
+						<img *ngIf="alert?.image" src="{{alert?.image}}" alt="" style="width: 80%;">
+						<img *ngIf="!alert?.image" src="assets/images/calendar.png" alt="">
+
 					</div>
-					<div class="col-lg-8">
+					<div class="col-lg-8 col-md-8 col-sm-7">
 						<h4>
 							<strong>
-								Audiência de conciliação vai contemplar moradores do Anel e da BR-381. As primeiras 19 famílias já têm imóvel escolhido e devem finalizar o processo de compra. A audiência está marcada para o dia 26 de outubro, no Centro Judiciário de Conciliação, em Belo Horizonte (MG), das 13h às 17h.
+								{{alert?.text}}
 							</strong>
 						</h4>
 					</div>
@@ -28,7 +31,7 @@
 				<button class="btn btn-danger" data-dismiss="modal" aria-hidden="true">
 					Fechar
 				</button>
-				<button class="btn btn-primary" (click)="goTo('/noticias/audiencia-de-conciliacao-contempla-moradores-do-anel-e-br-381')">
+				<button *ngIf="alert?.link != ''" class="btn btn-primary" (click)="goTo(alert?.link)">
 					Ver detalhes
 				</button>
 			</div>
