--- a/src/app/pages/properties/properties.component.html
+++ b/src/app/pages/properties/properties.component.html
@@ -66,10 +66,10 @@
 										<div class="row">
 											<div class="col-sm-6">
 												<div class="single_tab_content">
-													<p style="font-size: 1.24rem;">A etapa de 2017 do Concilia BR 381 e Anel, voltada ao reassentamento de 264 famílias, deu prioridade àquelas sob regime de aluguel social. Nesta etapa, a modalidade mais utilizada foi a de compra assistida, em especial para as comunidades vila da Paz, vila da Luz, vila Pica-pau e vila Bom Destino</p>
-													<p style="font-size: 1.24rem;">Para contemplar as famílias da maneira mais eficiente e rápida possível, foi criado um banco de imóveis formado por aqueles disponíveis no mercado, no âmbito de algumas regiões no entorno da capital mineira (Belo Horizonte). Os imóveis também obedecem a critérios mínimos básicos definidos para as necessidades das famílias após análise e avaliação dos seus cadastros.</p>
-													<p style="font-size: 1.24rem;">No caso da etapa de 2017, as famílias tiveram a possibilidade de escolher entre tipos de unidade habitacional como apartamentos e/ou casas.</p>
-													<p style="font-size: 1.24rem;">Levou-se em consideração, também, que muitas famílias usavam as dependências de suas moradias para estabelecer pequenos negócios, responsáveis pela geração de sua renda.</p>
+													<p class="font-124">A etapa de 2017 do Concilia BR 381 e Anel, voltada ao reassentamento de 264 famílias, deu prioridade àquelas sob regime de aluguel social. Nesta etapa, a modalidade mais utilizada foi a de compra assistida, em especial para as comunidades vila da Paz, vila da Luz, vila Pica-pau e vila Bom Destino</p>
+													<p class="font-124">Para contemplar as famílias da maneira mais eficiente e rápida possível, foi criado um banco de imóveis formado por aqueles disponíveis no mercado, no âmbito de algumas regiões no entorno da capital mineira (Belo Horizonte). Os imóveis também obedecem a critérios mínimos básicos definidos para as necessidades das famílias após análise e avaliação dos seus cadastros.</p>
+													<p class="font-124">No caso da etapa de 2017, as famílias tiveram a possibilidade de escolher entre tipos de unidade habitacional como apartamentos e/ou casas.</p>
+													<p class="font-124">Levou-se em consideração, também, que muitas famílias usavam as dependências de suas moradias para estabelecer pequenos negócios, responsáveis pela geração de sua renda.</p>
 												</div>
 											</div>
 
@@ -99,34 +99,61 @@
 											</div>
 										</div>
 										<div class="row">
-											<div class="col-sm-6">
+											<div class="col-sm-12">
 												<div class="single_tab_content">
 
-													<p style="font-size: 1.24rem;">Para a etapa de 2017 do Concilia BR 381 e Anel, ficou estabelecido que os imóveis destinados à compra assistida seriam os localizados na Região Metropolitana de Belo Horizonte ou no Colar Metropolitano da Região de Belo Horizonte, conforme relação dos municípios a seguir:</p><br>
-													<ul class="single_ab_mision">
-														<li class="font-124">
-															<i class="fa fa-check-square"></i>
-															<strong>Região Metropolitana de Belo Horizonte:</strong> Baldim, Belo Horizonte, Betim, Brumadinho, Caeté, Capim Branco, Confins, Contagem, Esmeraldas, Florestal, Ibirité, Igarapé, Itaguara, Itatiaiuçu, Jaboticatubas, Juatuba, Lagoa Santa, Mário Campos, Mateus Leme, Matozinhos, Nova Lima, Nova União, Pedro Leopoldo, Raposos, Ribeirão das Neves, Rio Acima, Rio Manso, Sabará, Santa Luzia, São Joaquim de Bicas, São José da Lapa, Sarzedo, Taquaraçu de Minas e Vespasiano.
-														</li><br>
-														<li class="font-124">
-															<i class="fa fa-check-square"></i>
-															<strong>Colar Metropolitano da Região de Belo Horizonte:</strong> Barão de Cocais, Belo Vale, Bom Jesus do Amparo, Bonfim, Fortuna de Minas, Funilândia, Inhaúma, Itabirito, Itaúna, Moeda, Pará de Minas, Prudente de Morais, Santa Bárbara, São Gonçalo do Rio Abaixo, São José da Varginha e Sete Lagoas.
-														</li>
-													</ul>
+													<p class="font-124">Para a etapa de 2017 do Concilia BR 381 e Anel, ficou estabelecido que os imóveis destinados à compra assistida seriam os localizados na Região Metropolitana de Belo Horizonte ou no Colar Metropolitano da Região de Belo Horizonte, conforme relação dos municípios a seguir:</p><br>
 												</div>
 											</div>
+											<div class="col-sm-12">
+												<div class="single_tab_content">
+													<div class="col-md-6">
+														<p class="font-124">
+															<strong>Região Metropolitana de Belo Horizonte:</strong><br /> Baldim, Belo Horizonte, Betim, Brumadinho, Caeté, Capim Branco, Confins, Contagem, Esmeraldas, Florestal, Ibirité, Igarapé, Itaguara, Itatiaiuçu, Jaboticatubas, Juatuba, Lagoa Santa, Mário Campos, Mateus Leme, Matozinhos, Nova Lima, Nova União, Pedro Leopoldo, Raposos, Ribeirão das Neves, Rio Acima, Rio Manso, Sabará, Santa Luzia, São Joaquim de Bicas, São José da Lapa, Sarzedo, Taquaraçu de Minas e Vespasiano.
+														</p>
+													</div>
+													<div class="col-sm-6" style="margin-bottom:20px;">
+														<div class="single_tab_img">
+															<span class="concilia-credit">
+																<i class="fa fa-user"></i>
+																&nbsp;&nbsp; Hevelyn Leão
+															</span>
+															<div class="gallery">
+																<a href="assets/images/mapas/regiaoMetropolitana.jpg">
+																	<img src="assets/images/mapas/regiaoMetropolitana.jpg" alt="" />
+																</a>
 
-											<div class="col-sm-6">
-												<div class="single_tab_img">
-													<!-- <span class="concilia-credit">
-														<i class="fa fa-user"></i>
-														&nbsp;&nbsp;
-													</span>
-													<img src="assets/images/banco-imoveis.jpg" alt="" />
-													<span class="concilia-caption">
-														<i class="fa fa-camera"></i>
-														&nbsp;&nbsp;
-													</span> -->
+															</div>
+															<span class="concilia-caption">
+																<i class="fa fa-camera"></i>
+																&nbsp;&nbsp; Mapa da região metropolitana de Belo Horizonte - MG
+															</span>
+														</div>
+													</div>
+													<div class="col-sm-6">
+														<div class="single_tab_img">
+															<span class="concilia-credit">
+																<i class="fa fa-user"></i>
+																&nbsp;&nbsp; Hevelyn Leão
+															</span>
+															<div class="gallery">
+																<a href="assets/images/mapas/colarMetropolitano.jpg">
+																	<img src="assets/images/mapas/colarMetropolitano.jpg" alt="" />
+																</a>
+
+															</div>
+															<span class="concilia-caption">
+																<i class="fa fa-camera"></i>
+																&nbsp;&nbsp; Mapa do colar metropolitano de Belo Horizonte - MG
+															</span>
+														</div>
+													</div>
+													<div class="col-md-6">
+														<p class="font-124">
+															<strong>Colar Metropolitano da Região de Belo Horizonte:</strong><br /> Barão de Cocais, Belo Vale, Bom Jesus do Amparo, Bonfim, Fortuna de Minas, Funilândia, Inhaúma, Itabirito, Itaúna, Moeda, Pará de Minas, Prudente de Morais, Santa Bárbara, São Gonçalo do Rio Abaixo, São José da Varginha e Sete Lagoas.
+														</p>
+													</div>
+
 												</div>
 											</div>
 										</div>
@@ -144,7 +171,7 @@
 											<div class="col-sm-6">
 												<div class="single_tab_content">
 
-													<p style="font-size: 1.24rem;">Critérios e características necessários para fazer parte do Banco de Imóveis:</p>
+													<p class="font-124">Critérios e características necessários para fazer parte do Banco de Imóveis:</p>
 													<ul class="single_ab_mision">
 														<li class="font-124">
 															<i class="fa fa-check-square"></i>
@@ -206,7 +233,7 @@
 														</span>
 
 													</div>
-													<p style="font-size: 1.24rem;">O programa Concilia BR-381 e Anel busca sempre o imóvel que mais se adeque a cada unidade familiar. Para nortear a melhor destinação, o programa busca atender os seguintes critérios:</p>
+													<p class="font-124">O programa Concilia BR-381 e Anel busca sempre o imóvel que mais se adeque a cada unidade familiar. Para nortear a melhor destinação, o programa busca atender os seguintes critérios:</p>
 
 													<ul type="A">
 														<li class="list-alpha-numeric font-124">
@@ -261,11 +288,11 @@
 											<div class="col-sm-6">
 												<div class="single_tab_content">
 
-													<p style="font-size: 1.24rem;">O acesso aos imóveis é facilitado por um registro fotográfico dos imóveis existentes no Banco de Imóveis para que as famílias tenham maior facilidade de visualização durante o procedimento de escolha.</p>
+													<p class="font-124">O acesso aos imóveis é facilitado por um registro fotográfico dos imóveis existentes no Banco de Imóveis para que as famílias tenham maior facilidade de visualização durante o procedimento de escolha.</p>
 
-													<p style="font-size: 1.24rem;">Outra medida para facilitar a escolha é a apresentação de uma relação dos equipamentos públicos na região dos imóveis.</p>
+													<p class="font-124">Outra medida para facilitar a escolha é a apresentação de uma relação dos equipamentos públicos na região dos imóveis.</p>
 
-													<p style="font-size: 1.24rem;">O programa Concilia BR-381 permite às famílias a visitação de até 3 (três) imóveis escolhidos por elas. Caso não haja eleição de algum dos imóveis visitados, a família passa por novo procedimento de escolha.</p>
+													<p class="font-124">O programa Concilia BR-381 permite às famílias a visitação de até 3 (três) imóveis escolhidos por elas. Caso não haja eleição de algum dos imóveis visitados, a família passa por novo procedimento de escolha.</p>
 												</div>
 											</div>
 
