Adição de mais duas fotos na aba de localização dos imoveis

--- a/src/app/pages/properties/properties.component.html
+++ b/src/app/pages/properties/properties.component.html
@@ -120,7 +120,7 @@
 															</span>
 															<div class="gallery">
 																<a href="assets/images/mapas/regiaoMetropolitana.jpg">
-																	<img src="assets/images/mapas/regiaoMetropolitana.jpg" alt="" />
+																	<img src="assets/images/mapas/regiaoMetropolitanaThumb.png" alt="" />
 																</a>
 
 															</div>
@@ -138,7 +138,7 @@
 															</span>
 															<div class="gallery">
 																<a href="assets/images/mapas/colarMetropolitano.jpg">
-																	<img src="assets/images/mapas/colarMetropolitano.jpg" alt="" />
+																	<img src="assets/images/mapas/colarMetropolitanoThumb.png" alt="" />
 																</a>
 
 															</div>
